--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,19 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: 5
+default: &defaults
+  adapter: postgresql
+  encoding: utf8
+  host: localhost
+  pool: 10
   timeout: 5000
+  reconnect: true
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  <<: *defaults
+  database: oauth2_provider_development
+  username: postgres
+  password:
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
+  <<: *defaults
+  database: oauth2_provider_test
+  username: postgres
+  password:
